# TestForProninTeam

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
donatecollect/collects/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
donatecollect/collects/migrations/: 0001_initial.py
donatecollect/collects/templates/emails/: collect_created.txt
donatecollect/donatecollect/: settings.py  urls.py  wsgi.py
donatecollect/payments/: models.py  serializers.py  signals.py  views.py
donatecollect/payments/templates/emails/: payment_to_author.txt  payment_to_donator.txt
scripts/: entrypoint.sh  prepare.sh  setup_env.py
testforproninteam/: manage.py
testforproninteam/collects/: __init__.py  serializers.py  signals.py  views.py
testforproninteam/collects/management/commands/: fill_mock_data.py
testforproninteam/collects/migrations/: 0002_remove_collect_collected_amount_and_more.py
testforproninteam/donatecollect/: asgi.py  settings.py  urls.py
testforproninteam/payments/: apps.py  serializers.py  signals.py  views.py
testforproninteam/payments/migrations/: 0001_initial.py
testforproninteam/payments/templates/emails/: payment_to_donator.txt
