[tool.poetry]
name = "testforproninteam"
version = "0.1.0"
description = ""
authors = ["Spaceocean <spaceocean@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
djangorestframework = "^3.16.0"
drf-yasg = "^1.21.10"
pillow = "^11.2.1"
idna = "^3.10"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
post-install = """
python -c \"from pathlib import Path; import shutil; 
env_file = Path('.env'); example_file = Path('.env.example'); 
if not env_file.exists() and example_file.exists(): shutil.copy(example_file, env_file); 
print('Файл .env создан из .env.example. Заполните его!')\"
"""
